--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "python3-mysql-example"]
 	path = python3-mysql-example
-	url = git@github.com:teofob/python3-mysql-example.git
+	url = https://github.com/teofob/python3-mysql-example.git
