--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "python3-mysql-example"]
 	path = python3-mysql-example
 	url = https://github.com/teofob/python3-mysql-example.git
+   branch = master
